--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -16,61 +16,81 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v2
-      - name: Build the Docker image for Go
-        run: | 
+      - name: Build image for Go 1.16
+        run: |
           docker build . --file golang/1.16/alpine/Dockerfile --tag $GO_IMAGE_NAME-alpine-1.16:$(date +%s)
           docker build . --file golang/1.16/bullseye/Dockerfile --tag $GO_IMAGE_NAME-bullseye-1.16:$(date +%s)
-          
+      - uses: actions/checkout@v2
+      - name: Build image for Go 1.17
+        run: |
           docker build . --file golang/1.17/alpine/Dockerfile --tag $GO_IMAGE_NAME-alpine-1.17:$(date +%s)
           docker build . --file golang/1.17/bullseye/Dockerfile --tag $GO_IMAGE_NAME-bullseye-1.17:$(date +%s)
-          
+      - uses: actions/checkout@v2
+      - name: Build image for Go 1.18
+        run: |
           docker build . --file golang/1.18/alpine/Dockerfile --tag $GO_IMAGE_NAME-alpine-1.18:$(date +%s)
           docker build . --file golang/1.18/bullseye/Dockerfile --tag $GO_IMAGE_NAME-bullseye-1.18:$(date +%s)
   java-image:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v2
-      - name: Build the Docker image for Java
-        run: | 
+      - name: Build image for Java 8
+        run: |
           docker build . --file java/8/alpine/Dockerfile --tag $JAVA_IMAGE_NAME-alpine-8:$(date +%s)
           docker build . --file java/8/bullseye/Dockerfile --tag $JAVA_IMAGE_NAME-bullseye-8:$(date +%s)
-          
+      - uses: actions/checkout@v2
+      - name: Build image for Java 11
+        run: |
           docker build . --file java/11/alpine/Dockerfile --tag $JAVA_IMAGE_NAME-alpine-11:$(date +%s)
           docker build . --file java/11/bullseye/Dockerfile --tag $JAVA_IMAGE_NAME-bullseye-11:$(date +%s)
-          
+      - uses: actions/checkout@v2
+      - name: Build image for Java 17
+        run: |
           docker build . --file java/17/alpine/Dockerfile --tag $JAVA_IMAGE_NAME-alpine-17:$(date +%s)
           docker build . --file java/17/bullseye/Dockerfile --tag $JAVA_IMAGE_NAME-bullseye-17:$(date +%s)
   node-image:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v2
-      - name: Build the Docker image for Node
+      - name: Build image for Nodejs 12
         run: |
           docker build . --file nodejs/12/alpine/Dockerfile --tag $NODE_IMAGE_NAME-alpine-12:$(date +%s)
           docker build . --file nodejs/12/bullseye/Dockerfile --tag $NODE_IMAGE_NAME-bullseye-12:$(date +%s)
-
+      - uses: actions/checkout@v2
+      - name: Build image for Nodejs 16
+        run: |
           docker build . --file nodejs/16/alpine/Dockerfile --tag $NODE_IMAGE_NAME-alpine-16:$(date +%s)
           docker build . --file nodejs/16/bullseye/Dockerfile --tag $NODE_IMAGE_NAME-bullseye-16:$(date +%s)
-
+      - uses: actions/checkout@v2
+      - name: Build image for Nodejs 17
+        run: |
           docker build . --file nodejs/17/alpine/Dockerfile --tag $NODE_IMAGE_NAME-alpine-17:$(date +%s)
           docker build . --file nodejs/17/bullseye/Dockerfile --tag $NODE_IMAGE_NAME-bullseye-17:$(date +%s)
   python-image:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v2
-      - name: Build the Docker image for Python
+      - name: Build image for Python 3.7
         run: |
           docker build . --file python/3.7/alpine/Dockerfile --tag $PYTHON_IMAGE_NAME-alpine-3.7:$(date +%s)
           docker build . --file python/3.7/bullseye/Dockerfile --tag $PYTHON_IMAGE_NAME-bullseye-3.7:$(date +%s)
-          
+      - uses: actions/checkout@v2
+      - name: Build image for Python 3.8
+        run: |
           docker build . --file python/3.8/alpine/Dockerfile --tag $PYTHON_IMAGE_NAME-alpine-3.8:$(date +%s)
           docker build . --file python/3.8/bullseye/Dockerfile --tag $PYTHON_IMAGE_NAME-bullseye-3.8:$(date +%s)
-          
+      - uses: actions/checkout@v2
+      - name: Build image for Python 3.9
+        run: |
           docker build . --file python/3.9/alpine/Dockerfile --tag $PYTHON_IMAGE_NAME-alpine-3.9:$(date +%s)
           docker build . --file python/3.9/bullseye/Dockerfile --tag $PYTHON_IMAGE_NAME-bullseye-3.9:$(date +%s)
-          
+      - uses: actions/checkout@v2
+      - name: Build image for Python 3.10
+        run: |
           docker build . --file python/3.10/alpine/Dockerfile --tag $PYTHON_IMAGE_NAME-alpine-3.10:$(date +%s)
           docker build . --file python/3.10/bullseye/Dockerfile --tag $PYTHON_IMAGE_NAME-bullseye-3.10:$(date +%s)
-          
+      - uses: actions/checkout@v2
+      - name: Build image for Python 3.11
+        run: |
           docker build . --file python/3.11/alpine/Dockerfile --tag $PYTHON_IMAGE_NAME-alpine-3.11:$(date +%s)
           docker build . --file python/3.11/bullseye/Dockerfile --tag $PYTHON_IMAGE_NAME-bullseye-3.11:$(date +%s)
