--- a/java/11/alpine/Dockerfile
+++ b/java/11/alpine/Dockerfile
@@ -1,3 +1,3 @@
-FROM openjdk:11-alpine
-
-RUN apk update && apk upgrade && rm -rf /var/cache/apk/*
+# Does not exist
+# From docks: The OpenJDK port for Alpine is not in a supported release by OpenJDK,
+# since it is not in the mainline code base.
