--- a/python/3.11/alpine/Dockerfile
+++ b/python/3.11/alpine/Dockerfile
@@ -1,3 +1,3 @@
 FROM python:3.11-rc-alpine
 
-RUN apt-get update && apt-get -y upgrade && rm -rf /var/lib/apt/lists/*
+RUN apk update && apk upgrade && rm -rf /var/cache/apk/*
