only run if specific directories modified.

--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -1,6 +1,12 @@
 name: Docker Image CI
 
 on:
+  push:
+    paths:
+      - 'golang/**'
+      - 'java/**'
+      - 'nodejs/**'
+      - 'python/**'
   pull_request:
     branches:
       - main
