--- a/.github/workflows/docker-image-golang.yml
+++ b/.github/workflows/docker-image-golang.yml
@@ -1,9 +1,6 @@
 name: Docker Image CI Golang
 
-on:
-  pull_request:
-    paths:
-      - golang/**
+on: [ pull_request ]
 
 env:
   GO_IMAGE_NAME: gl-golang
@@ -13,15 +10,42 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v2
+
+      - uses: dorny/paths-filter@v2
+        id: changes
+        with:
+          filters: |
+            1.16:
+              - 'golang/1.16/**'
+
       - name: Build image for Go 1.16
+        if: steps.changes.outputs.1.16 == 'true'
         run: |
           docker build . --file golang/1.16/alpine/Dockerfile --tag $GO_IMAGE_NAME-alpine-1.16:${{github.run_number}}
           docker build . --file golang/1.16/bullseye/Dockerfile --tag $GO_IMAGE_NAME-bullseye-1.16:${{github.run_number}}
+
+      - uses: dorny/paths-filter@v2
+        id: changes
+        with:
+          filters: |
+            1.17:
+              - 'golang/1.17/**'
+
       - name: Build image for Go 1.17
+        if: steps.changes.outputs.1.17 == 'true'
         run: |
           docker build . --file golang/1.17/alpine/Dockerfile --tag $GO_IMAGE_NAME-alpine-1.17:${{github.run_number}}
           docker build . --file golang/1.17/bullseye/Dockerfile --tag $GO_IMAGE_NAME-bullseye-1.17:${{github.run_number}}
+
+      - uses: dorny/paths-filter@v2
+        id: changes
+        with:
+          filters: |
+            1.18:
+              - 'golang/1.18/**'
+
       - name: Build image for Go 1.18
+        if: steps.changes.outputs.1.18 == 'true'
         run: |
           docker build . --file golang/1.18/alpine/Dockerfile --tag $GO_IMAGE_NAME-alpine-1.18:${{github.run_number}}
           docker build . --file golang/1.18/bullseye/Dockerfile --tag $GO_IMAGE_NAME-bullseye-1.18:${{github.run_number}}
