--- a/.github/workflows/docker-image-golang.yml
+++ b/.github/workflows/docker-image-golang.yml
@@ -12,40 +12,30 @@ jobs:
       - uses: actions/checkout@v2
 
       - uses: dorny/paths-filter@v2
-        id: changes_1.16
+        id: changes
         with:
           filters: |
             src:
               - 'golang/1.16/**'
+            src2:
+              - 'golang/1.17/**'
+            src3:
+              - 'golang/1.18/**'
 
       - name: Build image for Go 1.16
-        if: steps.changes_1.16.outputs.src == 'true'
+        if: steps.changes.outputs.src == 'true'
         run: |
           docker build . --file golang/1.16/alpine/Dockerfile --tag $GO_IMAGE_NAME-alpine-1.16:${{github.run_number}}
           docker build . --file golang/1.16/bullseye/Dockerfile --tag $GO_IMAGE_NAME-bullseye-1.16:${{github.run_number}}
 
-      - uses: dorny/paths-filter@v2
-        id: changes_1.17
-        with:
-          filters: |
-            src:
-              - 'golang/1.17/**'
-
       - name: Build image for Go 1.17
-        if: steps.changes_1.17.outputs.src == 'true'
+        if: steps.changes.outputs.src2 == 'true'
         run: |
           docker build . --file golang/1.17/alpine/Dockerfile --tag $GO_IMAGE_NAME-alpine-1.17:${{github.run_number}}
           docker build . --file golang/1.17/bullseye/Dockerfile --tag $GO_IMAGE_NAME-bullseye-1.17:${{github.run_number}}
 
-      - uses: dorny/paths-filter@v2
-        id: changes_1.18
-        with:
-          filters: |
-            src:
-              - 'golang/1.18/**'
-
       - name: Build image for Go 1.18
-        if: steps.changes_1.18.outputs.src == 'true'
+        if: steps.changes.outputs.src3 == 'true'
         run: |
           docker build . --file golang/1.18/alpine/Dockerfile --tag $GO_IMAGE_NAME-alpine-1.18:${{github.run_number}}
           docker build . --file golang/1.18/bullseye/Dockerfile --tag $GO_IMAGE_NAME-bullseye-1.18:${{github.run_number}}
