--- a/.github/workflows/docker-image-golang.yml
+++ b/.github/workflows/docker-image-golang.yml
@@ -12,6 +12,7 @@ jobs:
       - uses: actions/checkout@v2
 
       - uses: dorny/paths-filter@v2
+      - name: Check if files changed
         id: changes
         with:
           filters: |
