--- a/.github/workflows/docker-image-golang.yml
+++ b/.github/workflows/docker-image-golang.yml
@@ -11,8 +11,8 @@ jobs:
     steps:
       - uses: actions/checkout@v2
 
-      - uses: dorny/paths-filter@v2
       - name: Check if files changed
+        uses: dorny/paths-filter@v2
         id: changes
         with:
           filters: |
