--- a/.github/workflows/docker-image-python.yml
+++ b/.github/workflows/docker-image-python.yml
@@ -1,9 +1,6 @@
 name: Docker Image CI Python
 
-on:
-  pull_request:
-    paths:
-      - python/**
+on: [ pull_request ]
 
 env:
   PYTHON_IMAGE_NAME: gl-python
@@ -13,23 +10,45 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v2
+
+      - name: Check if files changed
+        uses: dorny/paths-filter@v2
+        id: changes
+        with:
+          filters: |
+            src:
+              - 'python/3.7/**'
+            src2:
+              - 'python/3.8/**'
+            src3:
+              - 'python/3.9/**'
+            src4:
+              - 'python/3.10/**'
+            src5:
+              - 'python/3.11/**'
+
       - name: Build image for Python 3.7
+        if: steps.changes.outputs.src == 'true'
         run: |
           docker build . --file python/3.7/alpine/Dockerfile --tag $PYTHON_IMAGE_NAME-alpine-3.7:${{github.run_number}}
           docker build . --file python/3.7/bullseye/Dockerfile --tag $PYTHON_IMAGE_NAME-bullseye-3.7:${{github.run_number}}
       - name: Build image for Python 3.8
+        if: steps.changes.outputs.src2 == 'true'
         run: |
           docker build . --file python/3.8/alpine/Dockerfile --tag $PYTHON_IMAGE_NAME-alpine-3.8:${{github.run_number}}
           docker build . --file python/3.8/bullseye/Dockerfile --tag $PYTHON_IMAGE_NAME-bullseye-3.8:${{github.run_number}}
       - name: Build image for Python 3.9
+        if: steps.changes.outputs.src3 == 'true'
         run: |
           docker build . --file python/3.9/alpine/Dockerfile --tag $PYTHON_IMAGE_NAME-alpine-3.9:${{github.run_number}}
           docker build . --file python/3.9/bullseye/Dockerfile --tag $PYTHON_IMAGE_NAME-bullseye-3.9:${{github.run_number}}
       - name: Build image for Python 3.10
+        if: steps.changes.outputs.src4 == 'true'
         run: |
           docker build . --file python/3.10/alpine/Dockerfile --tag $PYTHON_IMAGE_NAME-alpine-3.10:${{github.run_number}}
           docker build . --file python/3.10/bullseye/Dockerfile --tag $PYTHON_IMAGE_NAME-bullseye-3.10:${{github.run_number}}
       - name: Build image for Python 3.11
+        if: steps.changes.outputs.src5 == 'true'
         run: |
           docker build . --file python/3.11/alpine/Dockerfile --tag $PYTHON_IMAGE_NAME-alpine-3.11:${{github.run_number}}
           docker build . --file python/3.11/bullseye/Dockerfile --tag $PYTHON_IMAGE_NAME-bullseye-3.11:${{github.run_number}}
