--- a/.github/workflows/docker-image-golang.yml
+++ b/.github/workflows/docker-image-golang.yml
@@ -16,28 +16,28 @@ jobs:
         uses: dorny/paths-filter@v2
         id: changes
         with:
-          filters: |
-            src:
+          filters:
+            golang16:
               - 'golang/1.16/**'
-            src2:
+            golang17:
               - 'golang/1.17/**'
-            src3:
+            golang18:
               - 'golang/1.18/**'
 
       - name: Build image for Go 1.16
-        if: steps.changes.outputs.src == 'true'
+        if: steps.changes.outputs.golang16 == 'true'
         run: |
           docker build . --file golang/1.16/alpine/Dockerfile --tag $GO_IMAGE_NAME-alpine-1.16:${{github.run_number}}
           docker build . --file golang/1.16/bullseye/Dockerfile --tag $GO_IMAGE_NAME-bullseye-1.16:${{github.run_number}}
 
       - name: Build image for Go 1.17
-        if: steps.changes.outputs.src2 == 'true'
+        if: steps.changes.outputs.golang17 == 'true'
         run: |
           docker build . --file golang/1.17/alpine/Dockerfile --tag $GO_IMAGE_NAME-alpine-1.17:${{github.run_number}}
           docker build . --file golang/1.17/bullseye/Dockerfile --tag $GO_IMAGE_NAME-bullseye-1.17:${{github.run_number}}
 
       - name: Build image for Go 1.18
-        if: steps.changes.outputs.src3 == 'true'
+        if: steps.changes.outputs.golang18 == 'true'
         run: |
           docker build . --file golang/1.18/alpine/Dockerfile --tag $GO_IMAGE_NAME-alpine-1.18:${{github.run_number}}
           docker build . --file golang/1.18/bullseye/Dockerfile --tag $GO_IMAGE_NAME-bullseye-1.18:${{github.run_number}}
